--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,9 +1,9 @@
 <main class="home">
 
   <section class="hero">
-    <!-- Video de fondo -->
-    <video class="hero-video" autoplay muted loop playsinline>
-      <source src="assets/images/Img 6759(1).webm" type="video/mp4">
+    <!-- Video de fondo optimizado para escritorio y móviles -->
+    <video class="hero-video" autoplay muted loop playsinline preload="metadata">
+      <source src="assets/images/Fondohome.webm" type="video/webm">
       Tu navegador no soporta videos en HTML5.
     </video>
 
