--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -22,12 +22,9 @@ a {
   overflow: hidden;
 }
 
-
 /* Video de fondo */
 .hero-video {
-  filter: blur(1px) brightness(0.3) ; /* blur para desenfoque, brightness para opacidad */
-  opacity: 0.7; /* controla la opacidad */
-  position: fixed;
+  position: fixed; /* permanece en el fondo mientras se hace scroll */
   top: 50%;
   left: 50%;
   width: 100%;
@@ -35,11 +32,14 @@ a {
   object-fit: cover;
   transform: translate(-50%, -50%);
   z-index: -1;
-  filter: brightness(0.3);
+  filter: brightness(0.3); /* oscurece el video */
+  opacity: 0.7;
 }
 
 /* Contenido del Hero */
 .hero-content {
+  position: relative;
+  z-index: 1;
   color: var(--black-900);
   max-width: 800px;
   margin: 0 auto;
