--- a/src/app/institucion/institucion.component.html
+++ b/src/app/institucion/institucion.component.html
@@ -14,18 +14,21 @@
 
     <div class="barradivisora"></div>
 
-    <!-- Carrousel 3D existente -->
-    <section class="contaninercarrouselpadding">
-      <div class="containercarrousel">
-        <div class="carrousel">
-          <div class="carrousel_item"></div>
-          <div class="carrousel_item"></div>
-          <div class="carrousel_item"></div>
-          <div class="carrousel_item"></div>
-          <div class="carrousel_item"></div>
+    <section class="containerslider">
+      <div class="slider-wrapper">
+        <div class="slider">
+          <img id="slide-1" src="https://images.unsplash.com/photo-1656464868371-602be27fd4c2?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1200&q=80" alt="3D rendering of an imaginary orange planet in space" />
+          <img id="slide-2" src="https://images.unsplash.com/photo-1657586640569-4a3d4577328c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1200&q=80" alt="3D rendering of an imaginary green planet in space" />
+          <img id="slide-3" src="https://images.unsplash.com/photo-1656077217715-bdaeb06bd01f?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1200&q=80" alt="3D rendering of an imaginary blue planet in space" />
+        </div>
+        <div class="slider-nav">
+          <a href="slide-1"></a>
+          <a href="slide-2"></a>
+          <a href="slide-3"></a>
         </div>
       </div>
     </section>
+
 
     <div class="barradivisora"></div>
 
@@ -62,7 +65,14 @@
         </div>
       </div>
     </section>
-
+    <div class="carousel carousel--scroll-buttons carousel--scroll-markers carousel--inert">
+      <div class="carousel__slide" data-label="Slide 1">…</div>
+      <div class="carousel__slide" data-label="Slide 2">…</div>
+      <div class="carousel__slide" data-label="Slide 3">…</div>
+      <div class="carousel__slide" data-label="Slide 4">…</div>
+      <div class="carousel__slide" data-label="Slide 5">…</div>
+    </div>
+    <div>
     <div class="barradivisora"></div>
 
     <!-- Slider Institución -->
@@ -81,6 +91,14 @@
         <button class="next" (click)="nextSlide()">&#10095;</button>
       </div>
     </section>
-
-  </main>
-</main>
+    <section class="contaninercarrouselpadding">
+      <div class="containercarrousel">
+        <div class="carrousel">
+          <div class="carrousel_item"></div>
+          <div class="carrousel_item"></div>
+          <div class="carrousel_item"></div>
+          <div class="carrousel_item"></div>
+          <div class="carrousel_item"></div>
+        </div>
+      </div>
+    </section>
